Fixed button overflow on iPad Pro when using high contrast and adjusted label color contrast values

--- a/app/pages/user-reservations/_user-reservations-page.scss
+++ b/app/pages/user-reservations/_user-reservations-page.scss
@@ -20,10 +20,6 @@
 
       .image-container {
         background-color: transparent;
-
-        img {
-          height: 179px;
-        }
       }
     }
   };
